<resources>
    <string name="app_name">EasyMail</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="AuthSharedPref">Auth</string>
    <string name="StateJson">stateJson</string>
    <string name="RequestGooglePlayServices">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="NoMessagesResponseDisplayText">No results returned !</string>
    <string name="GmailApi">Gmail Api</string>
    <string name="test">Test</string>
    <string name="Subject_test">Google OAuth 2.0 Playground connected to your Google Account</string>
    <string name="to">to</string>
    <string name="snippet_test">Google OAuth 2.0 Playground connected to your Google Account Hi Harshit, Google OAuth 2.0 Playground now has access to your Google Account harshit.bansalec@gmail.com. Google OAuth 2.0 Playground can:",
  </string>
    <string name="read_full_message">Read Full Message</string>
    <string name="txt_subject">Subject</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_notif">Enable Push Notifications</string>
    <string name="txt_alarm">Enable Alarm</string>
    <string name="txt_date">Date</string>
    <string name="txt_time">Time</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_save">Save</string>
    <string name="txt_sync">Synchronising Mails..</string>
    <string name="txt_alarm_service">Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_snooze">Snooze</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_snooze_length_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <string-array name="list_snooze_length_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="auto_download_attachment_title">Auto Download Attachments</string>
    <string name="auto_download_attachment_summary">Automatically downloads the attachments from all the contacts.</string>
    <string name="subscription_search_filter">unsubscribe OR opt-out OR "opt out" OR "mail preferences" OR "email preferences" OR "manage notifications" OR "manage your notifications" OR "manage alerts" OR "alert preferences" OR "list:yahoogroups" OR "list:googlegroups" OR "list:listserv" OR "list:groups" OR "list:basecamp" OR "list:anyothers"</string>
    <string name="load_more">LOAD MORE</string>
    <string name="subject">Subject</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="menu_refresh">Refresh</string>
    <string-array name="metadata_headers_list">
        <item>Delivered-To</item>
        <item>From</item>
        <item>Date</item>
        <item>Subject</item>
        <item>MIME-Version</item>
        <item>Content-Type</item>
    </string-array>
</resources>
