<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.easymail.EditMessageActivity">

    <TextView
        android:id="@+id/text_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/edit_subject"
        android:text="@string/txt_subject"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_subject"
        android:layout_marginStart="16dp"
        />
    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_subject"
        android:layout_marginStart="16dp"
        android:inputType="text"
        tools:text="My Subject"/>
    <TextView
        android:id="@+id/text_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/edit_subject"
        android:labelFor="@+id/edit_notes"
        android:text="@string/txt_notes"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_notes"
        android:layout_marginStart="16dp"
        />
    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_notes"
        android:layout_marginStart="16dp"
        android:inputType="text"
        tools:text="My Notes"/>
    <CheckBox
        android:id="@+id/show_notif_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_notes"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
    <TextView
        android:id="@+id/text_show_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_alignBaseline="@+id/show_notif_checkbox"
        android:layout_toEndOf="@+id/show_notif_checkbox"
        android:text="@string/txt_alarm"/>
    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/show_notif_checkbox"
        android:labelFor="@+id/edit_date"
        android:text="@string/txt_date"
        android:onClick="showDatePickerDialog"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_date"
        android:layout_marginStart="16dp"
        />
    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_date"
        android:layout_marginStart="16dp"
        android:inputType="date"
        tools:text="Mon, April 27, 2015" />
    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/edit_date"
        android:labelFor="@+id/edit_time"
        android:text="@string/txt_time"
        android:onClick="showTimePickerDialog"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_time"
        android:layout_marginStart="16dp"
        />
    <EditText
        android:id="@+id/edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_time"
        android:layout_marginStart="16dp"
        android:inputType="time"
        tools:text="11:59 PM" />
    <CheckBox
        android:id="@+id/show_alarm_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
    <TextView
        android:id="@+id/text_show_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_alignBaseline="@+id/show_alarm_checkbox"
        android:layout_toEndOf="@+id/show_alarm_checkbox"
        android:text="@string/txt_notif"/>
</RelativeLayout>
