<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/email_card_view"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/Subject_test"
            android:textSize="16sp"/>
        <View
            android:id="@+id/view_subject"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/email_subject"
            android:background="#bbb" />
        <TextView
            android:id="@+id/email_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_subject"
            android:layout_marginStart="16dp"
            tools:text="Google"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/text_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_from"
            android:text="@string/to"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/email_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_from"
            android:layout_toEndOf="@+id/text_to"
            android:layout_marginStart="8dp"
            tools:text="me"/>
        <TextView
            android:id="@+id/email_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_to"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            tools:text="4:41 pm"/>
        <TextView
            android:id="@+id/email_snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_time"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/snippet_test" />
        <TextView
            android:id="@+id/expand_collapse_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_snippet"
            android:layout_marginBottom="8dp"
            android:text="@string/read_full_message"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
 </android.support.v7.widget.CardView>
